# MachinesCantSing

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: dependency-check.yml  release.yml
docs/: phase0-plan.md
scripts/: check-dep-age.mjs  release.mjs
src/: main.ts  now-playing.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: commands.rs  main.rs  text.rs
src-tauri/src/classifier/: mod.rs
src-tauri/src/db/: artist_classification.rs  classification_evidence.rs  mod.rs
src-tauri/src/itunes/: albums.rs  client.rs  mod.rs  search.rs
src-tauri/src/media/: mod.rs  mpris.rs  smtc.rs
src-tauri/src/musicbrainz/: client.rs  lookup.rs  mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/windows/: hooks.nsh
