[package]
name = "now-playing-flagger"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
chrono = { version = "0.4.45", features = ["serde"] }
env_logger = "0.11.11"
log = "0.4.33"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tauri = { version = "2.11.5", features = ["image-png", "tray-icon"] }
tauri-plugin-log = "2.9.0"
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros", "time", "sync"] }
unicode-normalization = "0.1.25"
urlencoding = "2.1.3"

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = ["Media_Control", "Foundation", "Foundation_Collections", "Win32_System_Com"] }
windows-future = "0.3.2"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5.18.0", features = ["tokio"] }

[build-dependencies]
tauri-build = { version = "2.6.3", features = ["codegen"] }
